objects/Event_Target_List__c.object
<CustomObject>
    <description>This object tracks the list of Event Target Member in Event</description>
    <fields>
        <fullName>Benefit_Spent__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.RM_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_ID_Prospect_Name__c</fullName>
        <label>CIS ID/Prospect Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event Target Lists</relationshipLabel>
        <relationshipName>Event_Target_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.Name_Surname_TH__c</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Owner__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.Owner.FirstName + &quot; &quot; + CIS_ID_Prospect_Name__r.Owner.LastName</formula>
        <label>Customer Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Cost__c</fullName>
        <description>Calculate from all Event Member under this Company with Status &quot;Going&quot;</description>
        <label>Event Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <formula>Event_Name__r.End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Event Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Event Target Lists</relationshipLabel>
        <relationshipName>Event_Target_Lists</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Record_Type__c</fullName>
        <formula>Event_Name__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <formula>Event_Name__r.Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Year__c</fullName>
        <label>Event Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Income_to_SME__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.Income_to_SME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income to SME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <formula>TEXT(CIS_ID_Prospect_Name__r.Ownership )</formula>
        <label>Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Pool__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.Port_Pool__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Port/Pool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Contact__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.RM_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RM Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Benefit__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.Remaining_Benefit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Going</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Going</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Show Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Benefit_Contact__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.Total_Benefit_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Benefit Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contact_of_Customers__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.Total_Contact_of_Customers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contact of Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <formula>Event_Name__r.Venue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue</label>
        <type>Text</type>
    </fields>
    <label>Event Target List</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Target Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>cannot_change_event_name</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Event_Name__c )</errorConditionFormula>
        <errorDisplayField>Event_Name__c</errorDisplayField>
        <errorMessage>Not Allow to Change Event Name</errorMessage>
    </validationRules>
</CustomObject>